--- a/style.css
+++ b/style.css
@@ -6,10 +6,20 @@ header{
   background-color: gray;
   width: 960px;
   margin: 0px auto;
+  text-align: center;
 }
 
 img {
+  padding: 30px;
   max-height: 200px;
   max-width: 70%;
   float: left;
+  border: 2px solid red;
+}
+
+#imageSection{
+  max-height: 300px;
+  max-width: 80%;
+  height: 250px;
+  margin: 0px auto;
 }
