--- a/style.css
+++ b/style.css
@@ -3,21 +3,23 @@
 }
 
 header{
-  background-color: gray;
+  background-color: white;
   width: 960px;
   margin: 0px auto;
   text-align: center;
 }
 
 body {
-  background-image: url("https://blog-assets.servicemarket.com/wp-content/uploads/2017/03/Public-transportation-in-Dubai.jpg");
+  background-image: url("https://www.biography.com/.image/t_share/MTQ1MTM5Nzk0MTMxODIxOTc2/rosa-parks---civil-rights-pioneer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #imageSection{
   max-width: 70%;
   height: 250px;
   margin: 0px auto;
-  background-color: grey;
+  background-color: white;
 }
 
 img {
@@ -29,6 +31,12 @@ img {
 }
 
 section{
-  background-color: gray;
+  background-color: white;
   max-width: 35%;
+  margin: 0px auto;
+}
+
+#votingResultChart {
+  background-color: white;
+  margin: 0px auto;
 }
