--- a/style.css
+++ b/style.css
@@ -16,18 +16,18 @@ body {
 }
 
 #imageSection{
-  max-width: 70%;
+  width: 70%;
   height: 250px;
   margin: 0px auto;
   background-color: white;
 }
 
 img {
-  max-height: 200px;
-  max-width: 70%;
-  padding: 10px;
- /* float: left; */
+  float: left;  
   margin: 0px auto;
+  width: 33%; 
+  height: 98%; 
+  object-fit: scale-down;
 }
 
 section{
